# simple-chat

./: .gitignore  Cargo.toml  README-SETUP.md  README.md  justfile
.cargo/: config.toml
.github/workflows/: rust.yml
chatty-tcp/: Cargo.toml
chatty-tcp/src/: config.rs  connect.rs  handler.rs  lib.rs  listen.rs
chatty-tcp/src/connect/: command.rs  prompt.rs  response.rs
chatty-tcp/src/listen/: command.rs  response.rs  room.rs  state.rs
chatty-tcp/tests/: client_server_integration.rs
chatty-types/: Cargo.toml
chatty-types/src/: command.rs  config.rs  lib.rs  response.rs
