[workspace]
members = [
    "chatty-tcp",
    "chatty-types"
]
default-members = [
    "chatty-tcp",
    "chatty-types"
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
clap = "4.5.26"
serde = "1.0.217"
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = "1"
tokio-test = "0.4.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
