[package]
name = "chatty-tcp"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
thiserror = "2.0.3"
anyhow = "1.0.93"
serde = "1.0.215"
serde_json = "1.0.133"
clap = { version = "4.5.21", features = ["derive"] }
# workspace member depdenencies
chatty-types = { path = "../chatty-types" }

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
