[package]
name = "chatty-tcp"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
thiserror = "2.0.11"
anyhow = "1.0.95"
serde = "1.0.217"
serde_json = "1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
# workspace member depdenencies
chatty-types = { path = "../chatty-types" }

[dev-dependencies]
tokio-test = "0.4.4"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
