[package]
name = "chatty-tcp"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true, features = ["derive"] }
# workspace member depdenencies
chatty-types = { path = "../chatty-types" }

[dev-dependencies]
tokio-test = { workspace = true }

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
